--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -275,7 +275,7 @@ body {
   }
 
   /* ============================================================ */
-  /* ===================== START : BUTTONS ====================== */
+  /* ===================== START: BUTTONS ====================== */
   /* ============================================================ */
   .page__button {
     user-select: none;
@@ -372,11 +372,11 @@ body {
     width: 60%;
   }
   /* ============================================================ */
-  /* ====================== END : BUTTONS ======================= */
+  /* ======================= END: BUTTONS ======================= */
   /* ============================================================ */
 
   /* ============================================================ */
-  /* ====================== START : LINKS ======================= */
+  /* ======================= START: LINKS ======================= */
   /* ============================================================ */
   .page__link {
     cursor: pointer;
@@ -551,11 +551,11 @@ body {
     margin: 0;
   }
   /* ============================================================ */
-  /* ======================= END : LINKS ======================== */
+  /* ======================== END: LINKS ======================== */
   /* ============================================================ */
 
   /* ============================================================ */
-  /* ====================== START : IMAGES ====================== */
+  /* ======================= START: IMAGES ====================== */
   /* ============================================================ */
   .header__cart-icon {
     width: 1.8em;
@@ -763,11 +763,11 @@ body {
     width: 22%;
   }
   /* ============================================================ */
-  /* ======================= END : IMAGES ======================= */
+  /* ======================== END: IMAGES ======================= */
   /* ============================================================ */
 
   /* ============================================================ */
-  /* ====================== START : HEADER ====================== */
+  /* ======================= START: HEADER ====================== */
   /* ============================================================ */
   .header {
     position: relative;
@@ -850,21 +850,21 @@ body {
   }
 
   /* ============================================================ */
-  /* ======================= END : HEADER ======================= */
+  /* ======================== END: HEADER ======================= */
   /* ============================================================ */
 
   /* ============================================================ */
-  /* ==================== START : NAV DESKTOP =================== */
+  /* ===================== START: NAV DESKTOP =================== */
   /* ============================================================ */
   .nav-desktop {
     display: none;
   }
   /* ============================================================ */
-  /* ===================== END : NAV DESKTOP ==================== */
+  /* ====================== END: NAV DESKTOP ==================== */
   /* ============================================================ */
 
   /* ============================================================ */
-  /* ==================== START : NAV MOBILE ==================== */
+  /* ===================== START: NAV MOBILE ==================== */
   /* ============================================================ */
   .nav-mobile {
     text-align: center;
@@ -897,11 +897,11 @@ body {
     border-bottom-color: var(--blue);
   }
   /* ============================================================ */
-  /* ===================== END : NAV MOBILE ===================== */
+  /* ===================== END: NAV MOBILE ===================== */
   /* ============================================================ */
 
   /* ============================================================ */
-  /* ====================== START : FOOTER ====================== */
+  /* ====================== START: FOOTER ====================== */
   /* ============================================================ */
   .footer,
   .block-footer {
@@ -951,7 +951,7 @@ body {
   }
 
   /* ============================================================ */
-  /* ======================= END : FOOTER ======================= */
+  /* ======================== END: FOOTER ======================= */
   /* ============================================================ */
   .page {
     display: flex;
@@ -1587,7 +1587,7 @@ body {
 /* ============================================================ */
 @media screen and (min-width: 390px) {
   /* ============================================================ */
-  /* ====================== START : IMAGES ====================== */
+  /* ======================= START: IMAGES ====================== */
   /* ============================================================ */
   .header__cart-icon {
     width: 1.9em;
@@ -1598,11 +1598,11 @@ body {
     width: 1.9em;
   }
   /* ============================================================ */
-  /* ======================= END : IMAGES ======================= */
+  /* ======================== END: IMAGES ======================= */
   /* ============================================================ */
 
   /* ============================================================ */
-  /* ====================== START : HEADER ====================== */
+  /* ======================= START: HEADER ====================== */
   /* ============================================================ */
   .header__h1-link {
     font-size: 1.2em;
@@ -1613,7 +1613,7 @@ body {
     left: 94%;
   }
   /* ============================================================ */
-  /* ======================= END : HEADER ======================= */
+  /* ======================= END: HEADER ======================= */
   /* ============================================================ */
   .square {
     width: 20em;
@@ -1630,7 +1630,7 @@ body {
 /* ============================================================ */
 @media screen and (min-width: 428px) {
   /* ============================================================ */
-  /* ====================== START : IMAGES ====================== */
+  /* ======================= START: IMAGES ====================== */
   /* ============================================================ */
   .header__cart-icon {
     width: 2.1em;
@@ -1649,11 +1649,11 @@ body {
     width: 2.1em;
   }
   /* ============================================================ */
-  /* ======================= END : IMAGES ======================= */
+  /* ======================== END: IMAGES ======================= */
   /* ============================================================ */
 
   /* ============================================================ */
-  /* ====================== START : HEADER ====================== */
+  /* ======================= START: HEADER ====================== */
   /* ============================================================ */
   .header__h1-link {
     font-size: 1.4em;
@@ -1663,7 +1663,7 @@ body {
     left: 94.5%;
   }
   /* ============================================================ */
-  /* ======================= END : HEADER ======================= */
+  /* ======================== END: HEADER ======================= */
   /* ============================================================ */
   .form-field__input::placeholder
   /* .form__label, */ {
@@ -1685,7 +1685,7 @@ body {
 /* ============================================================ */
 @media screen and (min-width: 768px) {
   /* ============================================================ */
-  /* ====================== START : LINKS ======================= */
+  /* ======================= START: LINKS ======================= */
   /* ============================================================ */
   .header__h1-link {
     font-size: 1.6em;
@@ -1711,11 +1711,11 @@ body {
     font-size: 1.4em;
   }
   /* ============================================================ */
-  /* ======================= END : LINKS ======================== */
+  /* ======================== END: LINKS ======================== */
   /* ============================================================ */
 
   /* ============================================================ */
-  /* ====================== START : IMAGES ====================== */
+  /* ======================= START: IMAGES ====================== */
   /* ============================================================ */
   .header__cart-icon {
     width: 2em;
@@ -1735,11 +1735,11 @@ body {
     margin: 0;
   }
   /* ============================================================ */
-  /* ======================= END : IMAGES ======================= */
+  /* ======================== END: IMAGES ======================= */
   /* ============================================================ */
 
   /* ============================================================ */
-  /* ====================== START : HEADER ====================== */
+  /* ======================= START: HEADER ====================== */
   /* ============================================================ */
   .circle {
     height: 1.5em;
@@ -1748,11 +1748,11 @@ body {
     left: 96.5%;
   }
   /* ============================================================ */
-  /* ======================= END : HEADER ======================= */
+  /* ======================== END: HEADER ======================= */
   /* ============================================================ */
 
   /* ============================================================ */
-  /* ====================== START : FOOTER ====================== */
+  /* ======================= START: FOOTER ====================== */
   /* ============================================================ */
   .footer {
     flex-flow: row wrap;
@@ -1773,7 +1773,7 @@ body {
     align-content: center;
   }
   /* ============================================================ */
-  /* ======================= END : FOOTER ======================= */
+  /* ======================== END: FOOTER ======================= */
   /* ============================================================ */
   .neptune {
     flex-flow: row wrap;
@@ -1842,27 +1842,27 @@ body {
 /* ============================================================ */
 @media screen and (min-width: 992px) {
   /* ============================================================ */
-  /* == START : MODE SWITCH, FONT COLOR SWITCHS & THEME SWITCHS = */
+  /* == START: MODE SWITCH, FONT COLOR SWITCHS & THEME SWITCHS == */
   /* ============================================================ */
   .andromeda {
     display: block;
   }
   /* ============================================================ */
-  /* == END : MODE SWITCH, FONT COLOR SWITCHS & THEME SWITCHS === */
+  /* === END: MODE SWITCH, FONT COLOR SWITCHS & THEME SWITCHS === */
   /* ============================================================ */
 
   /* ============================================================ */
-  /* ===================== START : BUTTONS ====================== */
+  /* ====================== START: BUTTONS ====================== */
   /* ============================================================ */
   .page__button {
     width: 30%;
   }
   /* ============================================================ */
-  /* ====================== END : BUTTONS ======================= */
+  /* ======================= END: BUTTONS ======================= */
   /* ============================================================ */
 
   /* ============================================================ */
-  /* ====================== START : LINKS ======================= */
+  /* ======================= START: LINKS ======================= */
   /* ============================================================ */
   .header__h1-link {
     font-size: 1em;
@@ -1905,11 +1905,11 @@ body {
     width: 12%;
   }
   /* ============================================================ */
-  /* ======================= END : LINKS ======================== */
+  /* ======================== END: LINKS ======================== */
   /* ============================================================ */
 
   /* ============================================================ */
-  /* ====================== START : IMAGES ====================== */
+  /* ====================== START: IMAGES ====================== */
   /* ============================================================ */
   .nav-desktop__user-picture {
     width: 1.8em;
@@ -1976,11 +1976,11 @@ body {
     margin: 0;
   }
   /* ============================================================ */
-  /* ======================= END : IMAGES ======================= */
+  /* ======================== END: IMAGES ======================= */
   /* ============================================================ */
 
   /* ============================================================ */
-  /* ====================== START : HEADER ====================== */
+  /* ======================= START: HEADER ====================== */
   /* ============================================================ */
   .header {
     flex-flow: row nowrap;
@@ -1995,11 +1995,11 @@ body {
     left: 98.5%;
   }
   /* ============================================================ */
-  /* ======================= END : HEADER ======================= */
+  /* ======================== END: HEADER ======================= */
   /* ============================================================ */
 
   /* ============================================================ */
-  /* ==================== START : NAV DESKTOP =================== */
+  /* ===================== START: NAV DESKTOP =================== */
   /* ============================================================ */
   .nav-desktop {
     display: block;
@@ -2017,28 +2017,28 @@ body {
     padding: 0;
   }
   /* ============================================================ */
-  /* ===================== END : NAV DESKTOP ==================== */
+  /* ====================== END: NAV DESKTOP ==================== */
   /* ============================================================ */
 
   /* ============================================================ */
-  /* ==================== START : NAV MOBILE ==================== */
+  /* ===================== START: NAV MOBILE ==================== */
   /* ============================================================ */
   .nav-mobile {
     display: none;
   }
   /* ============================================================ */
-  /* ===================== END : NAV MOBILE ===================== */
+  /* ====================== END: NAV MOBILE ===================== */
   /* ============================================================ */
 
   /* ============================================================ */
-  /* ====================== START : FOOTER ====================== */
+  /* ======================= START: FOOTER ====================== */
   /* ============================================================ */
   .block-footer {
     justify-content: center;
     align-content: center;
   }
   /* ============================================================ */
-  /* ======================= END : FOOTER ======================= */
+  /* ======================== END: FOOTER ======================= */
   /* ============================================================ */
   .neptune {
     width: 80%;
