--- a/templates/admin/product/detail.html.twig
+++ b/templates/admin/product/detail.html.twig
@@ -7,15 +7,15 @@
 	{{ parent() }}
 {% endblock %}
 
-{# START : admin_product_detail #}
+{# START: admin_product_detail #}
 {% block body %}
 	<section class="page">
 		<h2>{{ product.name }}</h2>
 		<div
 			class="neptune">
-			{# START : card for mobile #}
+			{# START: card for mobile #}
 			<div class="saturn saturn_border-color_blue">
-				<img class="page__product-picture" src="{{ asset('assets/uploads/products/'~ product.picture) }}" alt="image {{ product.name }}"/>
+				<img class="page__product-picture" src="{{ asset('assets/uploads/products/'~ product.picture) }}" alt="image-{{ product.name }}"/>
 				<p>
 					{{ product.name }}
 				</p>
@@ -47,8 +47,8 @@
 				<a class="page__link page__update-link page__link_background-color_orange page__link_color_white" href="{{ path('admin_product_update', {'slug': product.slug}) }}?returnToAdminProductList=true">Modifier</a>
 				<a class="page__link page__delete-link page__delete-product-link  page__link_background-color_red page__link_color_white" href="{{ path('admin_product_delete', {'id':product.id, 'token':csrf_token('admin-product-delete' ~ product.id)} ) }}" data-productname="{{ product.name }}">Supprimer</a>
 			</div>
-			{# END : card for mobile #}
-			{# START : table for desktop #}
+			{# END: card for mobile #}
+			{# START: table for desktop #}
 			<table class="table table-product table_background-color_blue table_color_white table_border-color_blue">
 				<thead>
 					<tr>
@@ -59,7 +59,7 @@
 				<tbody>
 					<tr>
 						<th>Image</th>
-						<td><img class="page__product-picture" src="{{ asset('assets/uploads/products/'~ product.picture) }}" alt="image {{ product.name }}"></td>
+						<td><img class="page__product-picture" src="{{ asset('assets/uploads/products/'~ product.picture) }}" alt="image-{{ product.name }}"></td>
 					</tr>
 					<tr>
 						<th>Nom</th>
@@ -108,8 +108,8 @@
 					</tr>
 				</tbody>
 			</table>
-			{# END : table for desktop #}
+			{# END: table for desktop #}
 		</div>
 	</section>
 {% endblock %}
-{# START : admin_product_detail #}
+{# START: admin_product_detail #}
