--- a/templates/product/list.html.twig
+++ b/templates/product/list.html.twig
@@ -5,11 +5,11 @@
 	{{ parent() }}
 {% endblock %}
 
-{# START : product_list #}
+{# START: product_list #}
 {% block body %}
 	<section class="page">
 		<h2>Nos Produits</h2>
-		{# START : searchProductForm #}
+		{# START: searchProductForm #}
 		{{ form_start(searchProductForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'search-product-form' }}
 		) }}
 		<div class="form-field">
@@ -29,7 +29,7 @@
 			{% for product in products %}
 				<div class="venus">
 					<a class="image-link" href="{{ path('product_detail', {'slug': product.slug}) }}">
-						<img class="page__product-picture" src="{{ asset('assets/uploads/products/'~ product.picture) }}" alt="image {{ product.name }}"/>
+						<img class="page__product-picture" src="{{ asset('assets/uploads/products/'~ product.picture) }}" alt="image-{{ product.name }}"/>
 					</a>
 					<p>{{ product.name }}</p>
 					<p>{{ product.price|amount }}</p>
