--- a/templates/main/contact.html.twig
+++ b/templates/main/contact.html.twig
@@ -74,7 +74,7 @@
 				Merci de saisir un numéro de téléphone mobile.
 			</p>
 			<p class="error-message error-message_color_red error-message-validity-phone-number display-none">
-				Merci de saisir un numéro de téléphone mobile valide.
+				Merci de saisir un numéro de téléphone mobile.
 			</p>
 			{{ form_errors(contactForm.phoneNumber) }}
 		</div>
