--- a/templates/purchase/purchase.html.twig
+++ b/templates/purchase/purchase.html.twig
@@ -52,7 +52,7 @@
 		<button type="button" class="page__purchase-step page__button page__purchase-confirm-delivery-mode-button page__button_background-color_blue page__button_color_white display-none" id="purchase-delivery-mode-confirm-button">
 			Continuer
 		</button>
-		<h3 class="page__title-purchase-step page__title-payment-method-step page__purchase-step page__title-purchase-step_color_spanish-grey" id="payment-method-step">3 - Paiement Sécurisé 🔐</h3>
+		<h3 class="page__title-purchase-step page__title-checkout-method-step page__purchase-step page__title-purchase-step_color_spanish-grey" id="checkout-method-step">3 - Paiement Sécurisé 🔐</h3>
 		{# paymentMethod #}
 		<div class="form-field form-field-purchase-checkout-method display-none">
 			{#! TODO #3 START: Make Paypal checkout.  #}
